add new feature

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <p>This is for weather app </p>
+    <p>This is new feature for wrather app</p>
     <script src="script.js"></script>
 </body>
 </html>
