--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <p>This is for weather app </p>
+    <button>click me</button>
     <script src="script.js"></script>
 </body>
 </html>
