add input box of type radio

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <p>This is for weather app </p>
     <button>click me</button>
+    <label for="male">Male:<input type="radio" name="gender" id="male"></label> 
+    <label for="female">Female: <input type="radio" name="gender" id="female"></label> 
     <script src="script.js"></script>
 </body>
 </html>
