--- a/index.html
+++ b/index.html
@@ -1,16 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <p>This is for weather app </p>
-    <button>click me</button>
-    <label for="male">Male:<input type="radio" name="gender" id="male"></label> 
-    <label for="female">Female: <input type="radio" name="gender" id="female"></label> 
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="card">
+      <!--card start-->
+
+      <div class="search">
+        <!-- start for search bar and button-->
+        <input type="text" placeholder="enter city name" spellcheck="false" />
+        <button><img src="images/search.png" /></button>
+      </div>
+      <!--end for search-bar and button-->
+
+      <!--start of weather details -->
+      <div class="weather">
+        <img src="images/clear.png" class="weather-icon" />
+        <h1 class="temp">22°C</h1>
+        <h2 class="city">kathamndu</h2>
+        <div class="details">
+          <!--start detail-->
+          <div class="col">
+            <!--start col 1-->
+            <img src="images/humidity.png" />
+            <div>
+              <p class="humidity">50%</p>
+              <p>Humidity</p>
+            </div>
+          </div>
+          <!--end col1-->
+
+          <div class="col">
+            <!--start col2-->
+            <img src="images/wind.png" />
+            <div>
+              <p class="wind">50kh/hr</p>
+              <p>wind speed</p>
+            </div>
+          </div>
+          <!--endn col2-->
+        </div>
+        <!--end detail-->
+      </div>
+      <!--end of weather details-->
+    </div>
+    <!--card end-->
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
